Erros
Client.java:44: error: exception IOException is never thrown in body of corresponding try statement
				catch(IOException e){}
				^
Client.java:50: error: exception IOException is never thrown in body of corresponding try statement
				catch(IOException e){}
				^
Client.java:60: error: unreported exception IOException; must be caught or declared to be thrown
			sIn = in.readLine();
			                 ^
Client.java:86: error: unreported exception IOException; must be caught or declared to be thrown
				cs.close();
				        ^
Client.java:101: error: unreported exception IOException; must be caught or declared to be thrown
			sIn = in.readLine();
			                 ^
Client.java:157: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:164: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:173: error: unreported exception IOException; must be caught or declared to be thrown
			sIn = in.readLine();
			                 ^
Client.java:186: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:195: error: unreported exception IOException; must be caught or declared to be thrown
			sIn = in.readLine();
			                 ^
Client.java:204: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:213: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:220: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:229: error: unreported exception IOException; must be caught or declared to be thrown
			sIn = in.readLine();
			                 ^
Client.java:238: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:247: error: unreported exception IOException; must be caught or declared to be thrown
			sIn = in.readLine();
			                 ^
Client.java:252: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:261: error: unreported exception IOException; must be caught or declared to be thrown
			sIn = in.readLine();
			                 ^
Client.java:269: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:277: error: unreported exception IOException; must be caught or declared to be thrown
			sIn = in.readLine();
			                 ^
Client.java:285: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:296: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:303: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:311: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:318: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
Client.java:326: error: unreported exception IOException; must be caught or declared to be thrown
			sIn = in.readLine();
			                 ^
Client.java:334: error: unreported exception IOException; must be caught or declared to be thrown
		sIn = in.readLine();
		                 ^
